src/vm/snapshots/hebi__vm__tests__init_simple_data_class_derived_with_parent_field.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
class U(T): pass
U()


# Result:
Object(
    ClassInstance {
        name: "U",
        fields: {
            "v": Int(
                0,
            ),
        },
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {
                    "v": Int(
                        0,
                    ),
                },
                methods: {},
                parent: None,
            },
        ),
        is_frozen: Cell {
            value: true,
        },
    },
)
