src/vm/snapshots/hebi__vm__tests__list_indexing_invalid.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
[0, 1, 2]["yo"]


# Result:
Err(
    Vm(
        SpannedError {
            span: Span {
                start: 0,
                end: 0,
            },
            message: "`yo` is not a valid index",
        },
    ),
)
