src/vm/snapshots/hebi__vm__tests__list_indexing_invalid_opt.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
?[0, 1, 2]["yo"]


# Result:
runtime error: `yo` is not a valid index
