src/vm/snapshots/hebi__vm__tests__list_indexing_negative.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
[0, 1, 2][-1]


# Result:
Ok(
    Int(
        2,
    ),
)
